@@ -29,3 +29,4 @@ t/data.t
 t/helper.t
 t/home.t
 t/pathclass.t
+t/hostname.t
